--- a/version2/interrogate_4rag/note.ipynb
+++ b/version2/interrogate_4rag/note.ipynb
@@ -8,44 +8,66 @@
     "\n",
     "This system implements an intelligent data analysis and query system based on RAG (Retrieval Augmented Generation), allowing interaction with DataFrames using natural language.\n",
     "\n",
-    "## 1. System Components\n",
     "\n",
-    "### 1.1. Data Documentation (create_df_documents)\n",
-    "Converts DataFrame into retrievable document collections, including:\n",
-    "- Basic information (rows, columns, etc.)\n",
-    "- Statistical information for each column (numerical and categorical)\n",
-    "- Column correlation analysis\n",
-    "- Data quality information\n",
     "\n",
-    "### 1.2. Vector Store Setup (setup_vectorstore)\n",
-    "Establishes vector database using Chroma and HuggingFace embedding model:\n",
-    "- Embedding Model: Converts text into numerical vectors\n",
-    "- Storage: Chroma vector database\n",
-    "- Purpose: Similarity retrieval\n",
     "\n",
-    "### 1.3. Question-Answering Chain Creation (create_qa_chain)\n",
-    "Builds intelligent question-answering chain, including:\n",
-    "- Prompt template design\n",
-    "- Context retrieval\n",
-    "- LLM invocation\n",
-    "- Result parsing\n",
     "\n",
-    "### 1.4. Query Execution (query_dataframe)\n",
-    "Executes queries and processes results:\n",
-    "- Parses LLM responses\n",
-    "- Executes pandas code\n",
-    "- Formats output results\n",
     "\n",
-    "### 1.5. Result Display (display_query_result)\n",
-    "Formats and displays query results:\n",
-    "- Shows original query\n",
-    "- Presents analysis results\n",
-    "- Handles errors and provides tips\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. System Overview\n",
+    "\n",
+    "### 1.1. System Components Overview\n",
+    "\n",
+    "1. **Data Documentation (create_df_documents)**\n",
+    "- Convert DataFrame information into a searchable document collection, including metadata, contextual information, and information about similar datasets.\n",
+    "\n",
+    "2. **Vector Store Setup (setup_vectorstore)**\n",
+    "- Create and populate a vector database, storing document embeddings to support semantic search.\n",
     "  \n",
+    "3. **Question-Answering Chain Creation (create_qa_chain)**\n",
+    "- Retrieve relevant context from the vector store, format prompts, and invoke the language model. Parse the results and return a structured response.\n",
+    "\n",
+    "4. **Query Execution (query_dataframe)**\n",
+    "- Accept user queries and call the question-answering chain. Process the queries (pandas code execution) and return the results.\n",
+    "  \n",
+    "5. **Result Display (display_query_result)**\n",
+    "- Format and display query results, showing the original query and the analytical results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2. System Workflow\n",
+    "\n",
+    "The user submits a query in natural language (**User Input**). The query processing system (**query_dataframe**) receives the query and calls the question-answering chain (**create_qa_chain**) for processing. The question-answering chain (**create_qa_chain**) retrieves relevant information from the vector store (**setup_vectorstore**), invokes the LLM to generate an answer, and returns the result to the query processing system (**query_dataframe**). The query processing system (**query_dataframe**) processes the answer (executes pandas code based on the generated code) and sends the result to the result display system (**display_query_result**). Finally, the result display system (**display_query_result**) formats the output and presents it to the user for easy viewing.\n",
+    "\n",
+    "The diagram below illustrates the complete workflow of the RAG system's question-answering process.\n",
+    "\n",
+    "<img src=\"workflow.png\" alt=\"Workflow\" width=\"500\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Components Design \n",
     "\n",
-    "### 2.1. Import Necessary Packages\n"
+    "This RAG system is built using the LangChain framework, an open-source framework designed for building and deploying applications powered by language models. LangChain provides a suite of tools and components for processing and interacting with language models, making it suitable for a variety of natural language processing tasks such as question answering, conversational systems, text generation, and more.\n",
+    "\n",
+    "LangChain offers a modular framework, enabling independent development and testing of different components (e.g., document retrieval, LLM calls, output parsing). This modular design simplifies system maintenance and enhances scalability. Additionally, LangChain allows users to choose from various LLMs, embedding models, and retrievers based on their specific needs. This flexibility enables developers to select the most suitable components for their use cases and datasets, thereby improving system performance. \n",
+    "\n",
+    "Furthermore, LangChain provides a simplified API that enables developers to rapidly build complex workflows. Through chain-based invocation, developers can seamlessly connect multiple processing steps, creating a comprehensive query handling pipeline.\n",
+    "\n",
+    "### 2.1. Import Necessary Packages"
    ]
   },
   {
@@ -1824,6 +1846,8 @@
     "\n",
     "## 5. Problems and Improvements\n",
     "\n",
+    "### Problems\n",
+    "\n",
     "The system's main bottlenecks are as follows:\n",
     "\n",
     "1. **Insufficient handling of ambiguous queries**: The system struggles to accurately understand the user's intent for certain ambiguous queries and fails to correctly identify the corresponding column names. This results in errors during code execution or failure to find the relevant columns, leading to inaccurate results and affecting user trust.\n",
@@ -1832,7 +1856,7 @@
     "\n",
     "3. **Unnecessary Python code execution**: The system attempts to execute Python code unnecessarily even when the information can be directly retrieved from the vector database. This operation is redundant and often unsuccessful. Improvements are needed to enhance the `query_dataframe` function to avoid such unnecessary actions.\n",
     "\n",
-    "### Proposed Improvements:\n",
+    "### Proposed Improvements\n",
     "\n",
     "1. **Addressing ambiguous queries and output instability**: Experiment with different LLMs and embedding models to evaluate their performance in resolving these issues.\n",
     "\n",
