--- a/version2/interrogate_4rag/note.ipynb
+++ b/version2/interrogate_4rag/note.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "This system implements an intelligent data analysis and query system based on RAG (Retrieval Augmented Generation), allowing interaction with DataFrames using natural language.\n",
     "\n",
+    "**Contents**\n",
     "\n",
+    "<img src=\"Contents.png\" alt=\"contents\" width=\"300\" />\n",
     "\n",
     "\n",
     "\n",
