--- a/version3/simple_rag.ipynb
+++ b/version3/simple_rag.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a structured document object for embedding in the next step\n"
+    "1. Store column name information in a structured document object for embedding in the next step\n"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Embed document content and store it in the vector database\n",
+    "2. Embedding document content and storing it in the vector database\n",
     "\n",
     "This is done to enable efficient semantic search, so the system can quickly find documents related to the user's question.\n",
     "\n",
@@ -176,7 +176,7 @@
    "source": [
     "#### Step 1: Create a Retriever\n",
     "\n",
-    "A vector database is a database that stores embedding vectors. It also works as a retriever to find the embedded documents most similar to the user's question."
+    "A vector database is a database that stores embedding vectors. It also works as a retriever to find the embedded documents most similar to the user's question.So, we use the vectorstore create a retriever."
    ]
   },
   {
@@ -197,7 +197,7 @@
     "\n",
     "The augmentor is used to improve the retriever's performance. It combines the retrieved document content, the user's question, and the rules for generating pandas code. This input is sent to the LLM, helping it better understand the user's intent and generate more accurate pandas query code.\n",
     "\n",
-    "Since our vector database stores very little information (only column names), setting up the augment information is very important. I created a clear and detailed prompt for this purpose."
+    "Because our vector database stores very little information (only column names), setting up the augment information is very important. I created a clear and detailed prompt for this purpose here.\n"
    ]
   },
   {
